qu2: Move scoreboard to side, fix solver, tweak spacing

--- a/css/qudoku2.css
+++ b/css/qudoku2.css
@@ -103,7 +103,8 @@
 }
 
 #upperRight {
-  opacity: 0.5;
+  margin-left: 30px;
+  margin-right: 10px;
 }
 
 @media (max-width: calc(100vh - 100px + 460px)) {
@@ -117,7 +118,7 @@
     max-width: 95%;
     margin: 10px;
     margin-top: 0px;
-    order: 1;
+    order: 2;
     flex-direction: row;
     justify-content: center;
     flex-wrap: wrap;
@@ -135,7 +136,17 @@
     width: 500px;
     max-width: 95%;
     margin: 10px;
-    order: 2;
+    order: 1;
+  }
+
+  .scoreboard {
+    height: 250px !important;
+    margin-top: -10px !important;
+    margin-bottom: 10px !important;
+  }
+  .scoreboard .entry {
+    height: 25% !important;
+    width: 10% !important;
   }
 }
 #boardContainer {
@@ -147,6 +158,8 @@
   justify-content: center;
   flex-direction: column;
   margin-bottom: 20px;
+  height: calc(100vh - 50px);
+  width: calc(100vh - 100px);
   min-width: 200px;
   scroll-snap-align: end;
   scroll-snap-stop: normal;
@@ -190,52 +203,6 @@
 #boardContainer .moveCounter.odd {
   background-color: #cfc;
 }
-#boardContainer .scoreboard {
-  display: flex;
-  flex-wrap: wrap;
-  height: 15vh;
-  width: 100%;
-  max-width: 80vh;
-  order: 2;
-  margin-top: 40px;
-  font-size: 16pt;
-  font-size: max(min(4vw, 2.5vh), 8pt);
-  box-shadow: #0002 2px 2px 5px;
-}
-#boardContainer .scoreboard .entry {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 50%;
-  width: 5%;
-  border: 1px solid #666;
-  background-color: #fff;
-  transition: transform ease-out 0.1s, font-weight ease 0.1s;
-}
-#boardContainer .scoreboard .entry.odd {
-  background-color: #fbb;
-}
-#boardContainer .scoreboard .entry.even {
-  background-color: #bfb;
-}
-#boardContainer .scoreboard .entry.highlight {
-  font-weight: bold;
-  border: 1px solid #995;
-  transform: scale(1.1, 1.1);
-}
-#boardContainer .scoreboard .entry div {
-  text-align: center;
-}
-@media (max-width: 650px) {
-  #boardContainer .scoreboard {
-    height: 150px;
-  }
-  #boardContainer .scoreboard .entry {
-    height: 33.33%;
-    width: 12.5%;
-  }
-}
 #boardContainer .board {
   display: flex;
   position: relative;
@@ -258,12 +225,12 @@
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
-  width: 18%;
-  height: 13%;
+  width: 14%;
+  height: 14%;
   transform: translate(-50%, -50%);
   padding: 1%;
   font-size: 14pt;
-  font-size: min(3vw, 2vh);
+  font-size: min(2vw, 1.75vh);
   border: 1px solid #666;
   border-radius: 50%;
   background-color: #fff;
@@ -308,6 +275,8 @@
 #boardContainer .board .circle .rowOfValues .value {
   width: 50%;
   text-align: center;
+  margin-left: 2px;
+  margin-right: 2px;
 }
 #boardContainer .board .circle .topVals, #boardContainer .board .circle .bottomVals {
   width: 50%;
@@ -326,6 +295,54 @@
   height: 100%;
   z-index: 1;
 }
+.scoreboard {
+  display: flex;
+  flex-wrap: wrap;
+  height: 15vh;
+  width: 100%;
+  max-width: 80vh;
+  order: 2;
+  margin-top: 40px;
+  font-size: 16pt;
+  font-size: max(min(4vw, 2.5vh), 8pt);
+  box-shadow: #0002 2px 2px 5px;
+  color: black;
+}
+.scoreboard .entry {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 50%;
+  width: 25%;
+  border: 1px solid #666;
+  background-color: #fff;
+  transition: transform ease-out 0.1s, font-weight ease 0.1s;
+}
+.scoreboard .entry.odd {
+  background-color: #fbb;
+}
+.scoreboard .entry.even {
+  background-color: #bfb;
+}
+.scoreboard .entry.highlight {
+  font-weight: bold;
+  border: 1px solid #995;
+  transform: scale(1.1, 1.1);
+}
+.scoreboard .entry div {
+  text-align: center;
+}
+@media (max-width: 650px) {
+  .scoreboard {
+    height: 150px;
+  }
+  .scoreboard .entry {
+    height: 33.33%;
+    width: 12.5%;
+  }
+}
+
 .window h3 {
   text-align: center;
   margin: 10px;
