--- a/css/qudoku2Ivan.css
+++ b/css/qudoku2Ivan.css
@@ -207,8 +207,8 @@
       flex-wrap: wrap;
       align-items: center;
       justify-content: center;
-      width: 18%;
-      height: 13%;
+      width: 17%;
+      height: 17%;
       transform: translate(-50%, -50%);
       padding: 1%;
       font-size: 14pt;
@@ -246,6 +246,7 @@
         flex-direction: row;
         justify-content: space-between; }
         #boardContainer .board .circle .rowOfValues .value {
+          margin-right: 4px;
           width: 50%;
           text-align: center; }
       #boardContainer .board .circle .topVals, #boardContainer .board .circle .bottomVals {
